--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-application.title=Crawling_websites
+application.title=crawling_websites_01
 application.vendor=Jonathan
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 debug.modulepath=\
@@ -91,7 +91,7 @@ build.sysclasspath=ignore
 javac.target=1.7
 build.generated.dir=${build.dir}/generated
 jlink.launcher=false
-jlink.launcher.name=Crawling_websites
+jlink.launcher.name=crawling_websites_01
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
@@ -139,7 +139,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.notree=false
-dist.jar=${dist.dir}/Crawling_websites.jar
+dist.jar=${dist.dir}/crawling_websites_01.jar
 platform.active=default_platform
 annotation.processing.enabled=true
 main.class=main.Main
